@@ -2,6 +2,7 @@
 
 S3method(add_count,SingleCellExperiment)
 S3method(anti_join,SingleCellExperiment)
+S3method(append_samples,SingleCellExperiment)
 S3method(arrange,SingleCellExperiment)
 S3method(as_tibble,SingleCellExperiment)
 S3method(bind_cols,SingleCellExperiment)
@@ -158,6 +159,7 @@ importFrom(tidyr,unnest)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,eval_select)
 importFrom(ttservice,aggregate_cells)
+importFrom(ttservice,append_samples)
 importFrom(ttservice,bind_cols)
 importFrom(ttservice,bind_rows)
 importFrom(ttservice,join_features)
